# bin-dump-sql-text

./: CMakeLists.txt  README.rst
res/: ssb.ansi  ssb.sh  ssb.sql  ssb.tex  ssb.txt
src/: frontend.cpp
